# EDA

./: ARBOL BINARIO DE ABB  BST.cpp  README.md  cola circular.cpp  cola.cpp  lista doblemente enlazada.cpp  lista enlazada mejorada.cpp  lista enlazada.cpp
KNN_Explorer/cpp/: Visualizador.h  main.cpp
KNN_Explorer/src/components/: ControlPanel.tsx
agenda telefonica FINAL/agenda-elegante-main (1)/agenda-elegante-main/cpp-agenda/: ArchivoAgenda.cpp  ArchivoAgenda.h  Contacto.h  Interfaz.cpp  Interfaz.h  ListaContactos.cpp  ListaContactos.h  Nodo.h  README.md  agenda.txt  main.cpp
show de drones con luces FINAL/show de drones con luces/drone-light-show-main/: CMakeLists.txt  README.md  index.html  tailwind.config.ts
show de drones con luces FINAL/show de drones con luces/drone-light-show-main/src/: index.css
show de drones con luces FINAL/show de drones con luces/drone-light-show-main/src/components/: ControlPanel.tsx  CurrentFormationBadge.tsx  DroneCanvas.tsx  MenuFormaciones.tsx  PanelCodigoCpp.tsx  StatsPanel.tsx
show de drones con luces FINAL/show de drones con luces/drone-light-show-main/src/cpp/api/: wasm_interface.cpp
show de drones con luces FINAL/show de drones con luces/drone-light-show-main/src/cpp/core/: drone.cpp  drone.h  figura_base.cpp  figura_base.h
show de drones con luces FINAL/show de drones con luces/drone-light-show-main/src/cpp/factory/: creador_figuras.cpp  creador_figuras.h
show de drones con luces FINAL/show de drones con luces/drone-light-show-main/src/cpp/iconos_culturales/: mascara_diablada.cpp  virgen_candelaria.cpp
show de drones con luces FINAL/show de drones con luces/drone-light-show-main/src/cpp/simbolos/: estrellas.cpp  torre_eiffel.cpp
show de drones con luces FINAL/show de drones con luces/drone-light-show-main/src/cpp/textos/: candelaria_2026.cpp  epis.cpp  puno_se_respeta.cpp  sistemas_unap.cpp
show de drones con luces FINAL/show de drones con luces/drone-light-show-main/src/hooks/: useDroneSimulation.ts
show de drones con luces FINAL/show de drones con luces/drone-light-show-main/src/pages/: Index.tsx
show de drones con luces FINAL/show de drones con luces/drone-light-show-main/src/types/: drone.ts
show de drones con luces FINAL/show de drones con luces/drone-light-show-main/src/utils/: droneGraph.ts  formaciones.ts
vecinos mas cercanos KNN/: tailwind.config.ts
vecinos mas cercanos KNN/cpp/: KNN.cpp  KNN.h  Punto.h  README.md
vecinos mas cercanos KNN/src/: index.css
vecinos mas cercanos KNN/src/components/: KNNCanvas.tsx
vecinos mas cercanos KNN/src/lib/: knn.ts
vecinos mas cercanos KNN/src/pages/: Index.tsx
